# camel-amr-projects

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/amr-gazebo-pkg/share/amr-gazebo-pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr-gazebo-pkg/share/amr-gazebo-pkg/cmake/: amr-gazebo-pkgConfig-version.cmake  amr-gazebo-pkgConfig.cmake
install/amr-gazebo-pkg/share/amr-gazebo-pkg/environment/: ament_prefix_path.dsv  path.dsv
install/amr-gazebo-pkg/share/amr-gazebo-pkg/launch/: maze_world.launch.py
install/amr-gazebo-pkg/share/amr-gazebo-pkg/rviz/: diffbot.rviz  diffbot_amr.rviz
install/amr-gazebo-pkg/share/amr-gazebo-pkg/urdf/: diffbot.gazebo  diffbot.urdf  diffbot.urdf.xacro  diffbot_amr.urdf  diffbot_amr_obstacle.urdf
install/amr-gazebo-pkg/share/amr-gazebo-pkg/worlds/: AMR_factory.world  Factory.world  simplemap.world
install/amr-main-pkg/include/ClusteringDynamicObs/: ClusteringDynamicObs.hpp
install/amr-main-pkg/include/DynamicObstacle/: DynamicObstacle.hpp
install/amr-main-pkg/include/ObsDetection/: ObsDetection.hpp
install/amr-main-pkg/include/Variables/: SharedMemory.h  Variable.hpp  mapinfo.hpp
install/amr-main-pkg/include/Visualize/: Map_In_Out.hpp
install/amr-main-pkg/include/astar/: Astar.hpp
install/amr-main-pkg/include/simulmain/: simul_main.hpp
install/amr-main-pkg/lib/amr-main-pkg/: simulmain
install/amr-main-pkg/share/amr-main-pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr-main-pkg/share/amr-main-pkg/cmake/: amr-main-pkgConfig-version.cmake  amr-main-pkgConfig.cmake
install/amr-main-pkg/share/amr-main-pkg/environment/: ament_prefix_path.dsv  path.dsv
install/amr-main-pkg/share/amr-main-pkg/launch/: t
install/amr-main-pkg/share/amr-main-pkg/param/: amr_config.yaml
install/amr-obstacle-pkg/lib/amr-obstacle-pkg/: operate_dynamic_obstacle_node  spawn_dynamic_obstacle_node
install/amr-obstacle-pkg/share/amr-obstacle-pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr-obstacle-pkg/share/amr-obstacle-pkg/cmake/: amr-obstacle-pkgConfig-version.cmake  amr-obstacle-pkgConfig.cmake
install/amr-obstacle-pkg/share/amr-obstacle-pkg/environment/: ament_prefix_path.dsv  path.dsv
install/amr-obstacle-pkg/share/amr-obstacle-pkg/launch/: dynamic_obstacle.launch.py
install/amr_msg_interfaces/include/amr_msg_interfaces/msg/: grid_map_info.h  grid_map_info.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  trajectory.h  trajectory.hpp
install/amr_msg_interfaces/share/amr_msg_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr_msg_interfaces/share/amr_msg_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  amr_msg_interfacesConfig-version.cmake  amr_msg_interfacesConfig.cmake  amr_msg_interfaces__rosidl_generator_cExport.cmake  amr_msg_interfaces__rosidl_generator_cppExport.cmake  amr_msg_interfaces__rosidl_typesupport_cExport.cmake  amr_msg_interfaces__rosidl_typesupport_cppExport.cmake  amr_msg_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  amr_msg_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/amr_msg_interfaces/share/amr_msg_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/amr_msg_interfaces/share/amr_msg_interfaces/msg/: GridMapInfo.idl  (+3 more)
log/: latest_build
src/amr-gazebo-pkg/: CMakeLists.txt  package.xml
src/amr-gazebo-pkg/launch/: maze_world.launch.py
src/amr-gazebo-pkg/meshes/: base_link.STL
src/amr-gazebo-pkg/urdf/: diffbot.urdf.xacro  diffbot_amr.urdf  diffbot_amr_obstacle.urdf
src/amr-gazebo-pkg/worlds/: AMR_factory.world  Factory.world
src/amr-main-pkg/: CMakeLists.txt  package.xml
src/amr-main-pkg/include/ClusteringDynamicObs/: ClusteringDynamicObs.hpp  DBSCAN.hpp
src/amr-main-pkg/include/DynamicObstacle/: DynamicObstacle.hpp
src/amr-main-pkg/include/ObsDetection/: ObsDetection.hpp  PathChanger.hpp
src/amr-main-pkg/include/PathPlanning/: Astar.hpp
src/amr-main-pkg/include/Variables/: SharedMemory.h  Variable.hpp  mapinfo.hpp
src/amr-main-pkg/include/Visualize/: Map_In_Out.hpp
src/amr-main-pkg/include/astar/: Astar.hpp
src/amr-main-pkg/include/simulmain/: simul_main.hpp
src/amr-main-pkg/param/: amr_config.yaml
src/amr-main-pkg/src/: CMakeLists_0901.txt
src/amr-main-pkg/src/Amr_UI/: amr_example_qt.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.ui  qcustomplot.cpp  qcustomplot.hpp
src/amr-main-pkg/src/ClusteringDynamicObs/: ClusteringDynamicObs.cpp  DBSCAN.cpp
src/amr-main-pkg/src/DynamicObstacle/: DynamicObstacle.cpp
src/amr-main-pkg/src/ObsDetection/: ObsDetection.cpp  PathChanger.cpp
src/amr-main-pkg/src/PathPlanning/: Astar.cpp
src/amr-main-pkg/src/Visualize/: Map_In_Out.cpp
src/amr-main-pkg/src/astar/: Astar.cpp
src/amr-main-pkg/src/simulmain/: main_GUI.cpp  mainwindow.ui  simul_main.cpp  simulmain.pro  ui_mainwindow.h
src/amr-obstacle-pkg/: CMakeLists.txt  package.xml
src/amr-obstacle-pkg/launch/: dynamic_obstacle.launch.py
src/amr-obstacle-pkg/src/: operate_dynamic_obstacle.cpp  spawn_dynamic_obstacle.cpp
src/amr_msg_interfaces/: CMakeLists.txt  package.xml
(+32 files in other folders)
